logs/euganke-latex-importer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/euganke_latex_importer-0.2.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/importer'...
Listing './lib/python3.5/site-packages/importer/bober'...
Compiling './lib/python3.5/site-packages/importer/bober/Main.py'...
***   File "./lib/python3.5/site-packages/importer/bober/Main.py", line 18
    print json_str
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/importer/latex'...
Compiling './lib/python3.5/site-packages/importer/latex/Common.py'...
***   File "./lib/python3.5/site-packages/importer/latex/Common.py", line 203
    print json.dumps(d, sort_keys=True, indent=4)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/importer/latex/FAPPMain.py'...
***   File "./lib/python3.5/site-packages/importer/latex/FAPPMain.py", line 29
    print "Skupno je zaznanih %d nalog." % lp.detected_count
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/importer/latex/PresekLatexParser.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (PresekLatexParser.py, line 12)
Compiling './lib/python3.5/site-packages/importer/latex/REPLatexParser.py'...
***   File "./lib/python3.5/site-packages/importer/latex/REPLatexParser.py", line 10
    print "Exercise id not set !!!!!"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/importer/moodle'...
Compiling './lib/python3.5/site-packages/importer/moodle/Main.py'...
***   File "./lib/python3.5/site-packages/importer/moodle/Main.py", line 18
    print json_str
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/importer/moodle/MoodleParser.py'...
***   File "./lib/python3.5/site-packages/importer/moodle/MoodleParser.py", line 220
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/importer/restapi.py'...
***   File "./lib/python3.5/site-packages/importer/restapi.py", line 59
    print r.text
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
